--- a/registo.html
+++ b/registo.html
@@ -4,6 +4,7 @@
 
     <title>Registro</title>
     <h1>RELIZA TU REGISTO EN NUESTRA BASE DE DATOS</h1>
+    <h1>INGRESA LOS SIGUIENTES DATOS</h1>
 </head>
 <body>
     
