--- a/index.html
+++ b/index.html
@@ -30,12 +30,15 @@
             <br>
             <br>
             <!-- BOTÓN DE LLAMADA -->
-            <a href="tel:+573102685524">
-                <button class="boton">Llámanos</button>
-            </a>
-            <a href="/registo.html">
-                <button class="boton">Registo</button>
-            </a>
+            <div class="containerB">
+                <a href="tel:+573102685524">
+                  <button class="boton">Llámanos</button>
+                </a>
+                <a href="/registo.html">
+                  <button class="botonR">Registro</button>
+                </a>
+              </div>
+              
         </div>
     </header> 
     <main>
