--- a/index.html
+++ b/index.html
@@ -102,7 +102,9 @@
 
            <section class="imagen-ligth">
             <img src="x.svg" alt="" class="Close">
-            <img src="Imgv/women.jpg" alt="" class="agregar-imagen">
+
+            <!-- IMAGEN DE FONDO PARA EL HEADER -->
+            <img src="Imgv/tecnología.jpg" alt="" class="agregar-imagen">
            </section>
 
            <section class="contenedor" id="expertos">
